updated live/dead stuff

--- a/flow-live-dead/live-dead.Rmd
+++ b/flow-live-dead/live-dead.Rmd
@@ -2,7 +2,9 @@
 title: "flow-live-dead"
 author: "Tom Smith"
 date: '2022-03-15'
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
